--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -12,19 +12,16 @@
       <apollo-navbar-logo></apollo-navbar-logo>
     </div>
 
-
-      <div [hidden]="!search" class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Búsqueda">
-        </div>
-        <button type="submit" class="btn btn-default">
-          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        </button>
+    <div id="search" [hidden]="!search" class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Búsqueda">
       </div>
-      
+      <button type="submit" class="btn btn-default">
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+      </button>
+    </div>
+
     <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="navbar-collapse">
-
-
       <ul [hidden]="!dropdown" class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
