Agregado menú de notificaciones
+ Solucionado errores en preview-rv cuando no carga la imagen de perfil
de un usuario.

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -13,6 +13,7 @@
     <section id="publicaciones">
       <apollo-message-create-rv class="publicacion"></apollo-message-create-rv>
 
+      <!-- Esto hay que eliminarlo cuando se le agregue funcionalidad, por ahora es de muestra. -->
       <apollo-preview-rv class="publicacion"></apollo-preview-rv>
       <apollo-preview-rv [publica]="false" class="publicacion"></apollo-preview-rv>
       <apollo-preview-rv [compartida]="true" class="publicacion"></apollo-preview-rv>
