--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -1,5 +1,5 @@
 <div class="preview-rv shadow">
-  <div class="background">
+  <div class="background pull-left-100">
     <div [hidden]="!compartida" class="legend">
       <i class="fa fa-share" aria-hidden="true"></i>
       Compartido por <a href="#"><span class="username">@federico_sanches</span></a>
@@ -11,14 +11,14 @@
       <h4 class="rv-name">Ruta de viaje</h4>
     </div>
 
-    <div class="rv-body">
+    <div class="rv-body pull-left-100">
       <div class="rv-data">
         <i [hidden]="publica" class="rv-visibilidad fa fa-lock" aria-hidden="true" title="Privada"></i>
         <i [hidden]="!publica" class="rv-visibilidad fa fa-globe" aria-hidden="true" title="Pública"></i>
         <span class="rv-date-created"> · 10 min</span>
       </div>
 
-      <div class="rv-user">
+      <div class="rv-user pull-left-100">
         <div class="wrapper-user-picture">
           <img class="user-picture" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg">
         </div>
