--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.css
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.css
@@ -40,10 +40,8 @@
 }
 
 .message.vertical .text-box {
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 0;
   width: 100%;
+  align-self: flex-end;
 }
 
 .message.vertical .gradient {
