--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -1,3 +1,7 @@
+.container-fluid {
+  margin-bottom: 20px;
+}
+
 /**
  * Polaorid. Basado en:
  * https://paulund.co.uk/create-polaroid-image-with-css
