--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="form-bottom">
-          <form role="form" class="registration-form" [formGroup]="form" (ngSubmit)="onSubmit(user)">
+          <form role="form" class="form registration-form" [formGroup]="form" (ngSubmit)="onSubmit(user)">
             <div class="form-group">
               <label for="username">Nombre de Usuario</label>
               <input id="username" type="text" name="username" formControlName="username" class="form-control" autofocus required>
@@ -37,11 +37,11 @@
               <label for="form-about-yourself">Cuéntanos sobre ti</label>
               <textarea id="descripcion" name="descripcion" formControlName="descripcion" rows="3" class="form-control"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Registrarse</button>
+            <button type="submit" class="btn btn-primary">Confirmar</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 </div>
-  
+
