--- a/client/src/app/shared/components/navbar/components/notifications/components/notification-item/notification-item.component.html
+++ b/client/src/app/shared/components/navbar/components/notifications/components/notification-item/notification-item.component.html
@@ -7,7 +7,7 @@
     <!-- Cuando alguien te sigue. -->
     <div [hidden]="!seguido" class="details seguido">
       <span class="title">
-        <a class="username" href="#">@juanbono94</a> te está siguiendo
+        <a class="username" href="#">@juanbono94</a> te sigue
       </span>
       <i aria-hidden="true" class="fa fa-user-circle-o"></i>
       <span class="date">05:20 AM</span>
@@ -16,7 +16,7 @@
     <!-- Cuando marcan como favorito una RV. -->
     <div [hidden]="!favorito" class="details favorito">
       <span class="title">
-        <a class="username" href="#">@juanbono94</a> marcó como favorita a tu <a href="#">ruta de viaje</a>
+        <a class="username" href="#">@juanbono94</a> marcó favorita tu <a href="#">ruta de viaje</a>
       </span>
       <i aria-hidden="true" class="fa fa-star"></i>
       <span class="date">05:20 AM</span>
