--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -41,9 +41,9 @@
   <section id="contact" class="container content-section text-center">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <h2>Contáctate con Nosotros</h2>
+        <h2>Comunícate con Nosotros</h2>
 
-        <p>Puedes visitarnos en las redes sociales.</p>
+        <p>Estamos en las redes sociales.</p>
         <ul class="list-inline banner-social-buttons">
           <li>
             <a href="#" class="btn btn-default btn-lg">
