Mejore un poco la home.
+ Nuevos botones.
+ Aumente el espacio a los costados en todas las pantallas y en la
navbar.
+ Agregado boton seguir usuario.
+ Agregado icono a boton de crear RV.
+ Eliminado un test del server.

--- a/client/src/app/create-rv/components/creation-form/creation-form.component.html
+++ b/client/src/app/create-rv/components/creation-form/creation-form.component.html
@@ -28,7 +28,9 @@
           <label>Privada</label>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Siguiente</button>
+      <div class="form-btn">
+        <button type="submit" class="btn btn-material btn-primary">Siguiente</button>
+      </div>
     </form>
   </div>
 </div>
