--- a/client/src/app/create-rv/create-rv.component.html
+++ b/client/src/app/create-rv/create-rv.component.html
@@ -1,12 +1,6 @@
 <apollo-navbar></apollo-navbar>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4">
-      <apollo-creation-form></apollo-creation-form>
-    </div>
-    <div class="col-md-8">
-      <apollo-creation-panel></apollo-creation-panel>
-    </div>
-  </div>
+<div class="contenido">
+  <apollo-creation-form class="creation-form"></apollo-creation-form>
+  <apollo-creation-panel class="creation-panel"></apollo-creation-panel>
 </div>
