--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -29,7 +29,7 @@
       <div class="col-md-10 col-md-offset-1">
         <h2>Acerca de Apollo</h2>
         <p>Apollo es una red social para compartir viajes. Te permite llevar a cabo la planificación de un viaje y el descubrimiento de nuevos destinos turísticos sin tener que pasar horas buscando información sobre el mismo en internet; tan solo debes entrar en la aplicación y ver los viajes y recomendaciones de otras personas que te alcanzarán para crear tu viaje ideal.</p>
-        <p>A través de esta red social, se intenta resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de viajeros que ya estuvieron en el lugar o quieren realizar la misma travesía.</p>
+        <p>A través de esta aplicación, se intenta resolver el problema de miles de personas que buscan realizar un viaje con éxito y con el menor esfuerzo posible, de la mano de viajeros que ya estuvieron en el lugar o quieren realizar la misma travesía.</p>
         <p>Apollo es un proyecto que comenzó en la catedra de Ingeniería de Software en la <a href="http://www.frd.utn.edu.ar">UTN FRD</a>.</p>
       </div>
     </div>
