--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.css
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.css
@@ -34,6 +34,10 @@
   margin-bottom: 30px;
 }
 
+.message .btn .fa {
+  margin-right: 7px;
+}
+
 .message.vertical {
   position: relative;
   height: 100%;
