--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.html
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.html
@@ -5,7 +5,9 @@
         <p>
           ¿Tuviste las mejores vacaciones de tu vida? ¿Quieres que todos conozcan donde se consiguen las pizzas más ricas? Crea una ruta de viaje ahora y dala a conocer al mundo.
         </p>
-        <a class="btn btn-success" href="new/rv" role="button">Crear viaje</a>
+        <a class="btn btn-material btn-success" href="new/rv" role="button">
+          <i class="fa fa-plane" aria-hidden="true"></i>Crear viaje
+        </a>
       </section>
     </div>
   </div>
