--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,13 +1,3 @@
-.container-fluid {
-  padding-left: 37px;
-}
-
-#perfil {
-  width: 25%;
-  padding-left: 10px;
-  float: left;
-}
-
 #expand {
   height: 100vh;
   float: left;
@@ -21,29 +11,42 @@
   background-color: #f3f3f3;
 }
 
+.profile-card {
+  padding-right: 2vw;
+  width: 30%;
+  float: left;
+}
+
 #publicaciones {
-  width: 75%;
+  padding-left: 2vw;
+  width: 70%;
   float: right;
 }
 
+#publicaciones .rowx {
+  float: left;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
 #publicaciones .publicacion {
-  width: 50%;
-  padding: 0 10px;
-  margin: 0;
+  width: calc(50% - 0.5vw);
   margin-bottom: 20px;
   float: left;
 }
 
 #publicaciones.reduced {
   width: 100%;
+  padding-left: 0;
 }
 
 #publicaciones.reduced .publicacion {
-  width: 33.33%;
+  width: calc(33.33% - 0.5vw);
 }
 
 @media (max-width: 991px) {
-  #perfil {
+  .profile-card {
     width: 33.33%;
   }
 
@@ -56,28 +59,25 @@
   }
 
   #publicaciones.reduced .publicacion {
-    width: 50%;
+    width: calc(50% - 0.5vw);
   }
 }
 
 @media (max-width: 767px) {
-  .container-fluid {
-    padding-left: 15px;
-  }
-
   #expand {
     display: none;
   }
 
-  #perfil {
+  .profile-card {
     width: 100%;
-    padding: 0 10px;
     margin: 0;
     margin-bottom: 20px;
+    padding: 0;
   }
 
   #publicaciones {
     width: 100%;
+    padding: 0;
   }
 
   #publicaciones.reduced .publicacion {
