--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <apollo-navbar [search]="false" [dropdown]="false"></apollo-navbar>
 
-<div class="container-fluid">
+<div class="contenido">
   <div class="row align-vertical">
     <div class="col-md-4 col-md-offset-1">
       <a title="Apollo es una nueva forma de viajar" class="polaroid" href="">
@@ -37,7 +37,9 @@
               <label for="form-about-yourself">Cuéntanos sobre ti</label>
               <textarea id="descripcion" name="descripcion" formControlName="descripcion" rows="3" class="form-control"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Confirmar</button>
+            <div class="form-btn">
+              <button type="submit" class="btn btn-material btn-primary">Confirmar</button>
+            </div>
           </form>
         </div>
       </div>
