--- a/client/src/app/shared/components/navbar-logo/navbar-logo.component.css
+++ b/client/src/app/shared/components/navbar-logo/navbar-logo.component.css
@@ -5,6 +5,7 @@
 
 .navbar-brand {
   padding: 5px;
+  padding-left: 0;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -14,7 +15,6 @@
   height: 100%;
   display: inline-block;
   padding-right: 5px;
-  padding-left: 10px;
 }
 
 .navbar-brand:hover img {
