Las fotos de perfil se guardan localmente al ...
registrase.
+ Se devuelve la URL local de la foto de perfil al pedir la información
de un usuario.
+ Agregado boton para dejar de seguir a un usuario.

--- a/client/src/app/shared/components/preview-rv/preview-rv.component.html
+++ b/client/src/app/shared/components/preview-rv/preview-rv.component.html
@@ -20,11 +20,11 @@
 
       <div class="rv-user pull-left-100">
         <div class="wrapper-user-picture">
-          <img class="user-picture" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg">
+          <img class="user-picture" src="http://localhost:8080/usuario/avatar/1">
         </div>
         <a class="user-info" href="#">
-          <strong class="user-nombre">Matías Mangiantini</strong>
-          <span class="username">@matias.mangiantini</span>
+          <strong class="user-nombre">Jon Snow</strong>
+          <span class="username">@test</span>
         </a>
       </div>
 
