--- a/client/src/app/shared/components/profile-card/profile-card.component.html
+++ b/client/src/app/shared/components/profile-card/profile-card.component.html
@@ -13,9 +13,20 @@
       </div>
     </section>
 
+    <!--
+    Esta seccion solo debe mostrarse en el perfil de otros usuarios. No en la home ni en el perfil
+    del usuario logueado.
+    -->
     <section [hidden]="!seguir" class="seguir">
-      <button class="btn btn-material btn-primary">
-        <i class="fa fa-user-plus" aria-hidden="true"></i>Seguir
+      <!--
+      Si el usuario logueado ya sigue a este usuario.
+      <button class="btn-material btn-danger">
+        <i class="fa fa-user-times" aria-hidden="true"></i>Eliminar
+      </button>
+      -->
+      <button class="btn-material btn-primary">
+        <i class="fa fa-user-plus" aria-hidden="true"></i>
+        <span class="text">Seguir</span>
       </button>
     </section>
 
